# AvrSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_tests.sh  clean.sh  setup_build.sh  setup_test_build.sh
scripts/: createCommand.sh
src/: BitHelpers.cpp  BitHelpers.h  CMakeLists.txt  CommandBase.cpp  CommandBase.h  CommandRegister.cpp  CommandRegister.h  DataMemory.cpp  DataMemory.h  Debugger.cpp  Debugger.h  Decoder.cpp  Decoder.h  FlagCalculator.cpp  FlagCalculator.h  InterruptController.cpp  InterruptController.h  MemoryMapper.cpp  MemoryMapper.h  NetworkHandler.cpp  NetworkHandler.h  PeripheryHandler.cpp  PeripheryHandler.h  PeripheryRegister.cpp  PeripheryRegister.h  Processor.cpp  Processor.h  ProcessorDefines.h  ProcessorFlags.cpp  ProgramMemory.cpp  ProgramMemory.h  TcpCommandRegister.cpp  TcpCommandRegister.h  TcpCommandStreamParser.cpp  TcpCommandStreamParser.h  main.cpp  processorflags.cpp  processorflags.h
src/Commands/: ADC.cpp  ADC.h  ADD.cpp  ADD.h  ADIW.cpp  ADIW.h  AND.cpp  AND.h  ANDI.cpp  ANDI.h  ASR.cpp  ASR.h  BCLR.cpp  BCLR.h  BLD.cpp  BLD.h  BRBC.cpp  BRBC.h  BRBS.cpp  BRBS.h  BREAK.cpp  BREAK.h  BSET.cpp  BSET.h  BST.cpp  BST.h  CALL.cpp  CALL.h  CBI.cpp  CBI.h  CMakeLists.txt  COM.cpp  COM.h  CP.cpp  CP.h  CPC.cpp  CPC.h  CPI.cpp  CPI.h  CPSE.cpp  (+157 more)
src/Gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RegisterMachineGui.cpp  RegisterMachineGui.h
src/Logger/: CMakeLists.txt  ConsoleColor.cpp  ConsoleColor.h  Logger.cpp  Logger.h
src/Network/: CMakeLists.txt  Server.cpp  Server.h  TcpCommand.cpp  TcpCommand.h  TcpCommandStart.cpp  TcpCommandStart.h  TcpConnection.cpp  TcpConnection.h  TcpConnectionParser.cpp  TcpConnectionParser.h
src/Periphery/: ADC.cpp  ADC.h  CMakeLists.txt  IOPort.cpp  IOPort.h  PeripheryElement.cpp  PeripheryElement.h  PeripheryInterface.cpp  PeripheryInterface.h  Timer.cpp  Timer.h  Uart.cpp  Uart.h
src/avr/: HeaderFileParser.cpp  HeaderFileParser.h
test/: .a.hex.swp  a.hex  build.sh  test.asm
test/c/: CMakeLists.txt  Toolchain-avr-gcc.cmake  delay.c  gpio.c  if_cond.c  mul.c
test/c/addition/: addition.c
test/c/uart/: uart.c  uart.h  uart_int.c  uart_test.c
test/c/while_loop/: while_loop.c
test/unit_tests/: CMakeLists.txt  HeaderFileParser_Test.cpp
