cmake_minimum_required(VERSION 2.6)

set(RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
if(BUILD_TESTS)
    add_avr_test(empty_main empty_main/empty_main.c)
    add_avr_test(while_loop while_loop/while_loop.c)
    add_avr_test(addition addition/addition.c)
    add_avr_test(uart uart/uart_test.c)
    add_avr_test(if_cond if_cond.c)
    add_avr_test(delay delay.c)
    add_avr_test(gpio gpio.c)
    add_avr_test(mul_test mul.c)
    add_avr_test(self_test self_test.c)
    #add_subdirectory(empty_main)
    #add_subdirectory(while_loop)
   # add_subdirectory(addition)
   # add_subdirectory(addition_loop)
endif()
